--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,20 @@ p {
     padding: 100px 0;
 }
 
+#services2 .services2 {
+    flex-direction: column;
+    text-align: center;
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 100px 0;
+}
+
 #services .service-top {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+#services2 .service-top {
     max-width: 500px;
     margin: 0 auto;
 }
@@ -284,7 +297,31 @@ p {
     margin-top: 50px;
 }
 
+#services2 .service-bottom2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 50px;
+}
+
 #services .kopjes {
+    flex-basis: 80%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    padding: 30px;
+    border-radius: 10px;
+    background-image: url(./img/img-1.png);
+    background-size: cover;
+    margin: 10px 5%;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
+
+#services2 .kopjes {
     flex-basis: 80%;
     display: flex;
     align-items: flex-start;
@@ -312,7 +349,25 @@ p {
     z-index: -1;
 }
 
+#services2 .kopjes::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(60deg, black 0%, black 100%);
+    opacity: 0.9;
+    z-index: -1;
+}
+
 #services .service-bottom2 .icon {
+    height: 80px;
+    width: 80px;
+    margin-bottom: 20px;
+}
+
+#services2 .service-bottom2 .icon {
     height: 80px;
     width: 80px;
     margin-bottom: 20px;
@@ -325,7 +380,19 @@ p {
     text-transform: uppercase;
 }
 
+#services2 .kopjes h2 {
+    font-size: 2rem;
+    color: white;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+
 #services .kopjes p {
+    color: white;
+    text-align: left;
+}
+
+#services2 .kopjes p {
     color: white;
     text-align: left;
 }
@@ -610,6 +677,11 @@ p {
         flex-basis: 45%;
         margin: 2.5%;
     }
+
+    #services2 .service-bottom2 .kopjes {
+        flex-basis: 45%;
+        margin: 2.5%;
+    }
     #projects .project-item {
         flex-direction: row;
     }
@@ -704,6 +776,10 @@ p {
         display: none;
     }
     #services .service-bottom2 .kopjes {
+        flex-basis: 22%;
+        margin: 1.5%;
+    }
+    #services2 .service-bottom2 .kopjes {
         flex-basis: 22%;
         margin: 1.5%;
     }
