gewerkt aan alles en nieuwe link trello erin gezet

--- a/css/style.css
+++ b/css/style.css
@@ -831,4 +831,23 @@ p {
     }
 }
 
+.top {
+    width     : 5rem;
+    height    : 5rem;
+    background: black;
+    ;
+    color          : greenyellow;
+    font-size      : 150%;
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    border         : none;
+    position       : fixed;
+    bottom         : 7.5rem;
+    right          : 7.5rem;
+    border-radius  : 0.3125rem;
+    text-decoration: none;
+}
+
+
 
