--- a/css/style.css
+++ b/css/style.css
@@ -909,10 +909,10 @@ p {
 }
 
 .formulier {
-    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
     font-family: -apple-system, Arial, sans-serif;
     font-size: 1rem;
     font-weight: 400;
@@ -925,7 +925,6 @@ p {
     border: 8px solid #ced4da;
     border-radius: 0.5rem;
     max-width: 70%;   
-    
 }
 
 .Formulier3{
@@ -1088,3 +1087,62 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
 
 }
 
+
+
+.inputs{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    margin-bottom: 4rem;
+    flex-wrap: wrap;
+  }
+  
+  .inputs > div{
+    display: flex;
+    align-items: center;
+    width: 40rem;
+  }
+  
+  .filters{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap:4rem;
+    margin-bottom: 4rem;
+  }
+  
+  .filters > div{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .filter{
+    width: 5rem;
+    height: 5rem;
+    margin-right: 2rem;
+    -webkit-appearance: none;
+    appearance: none;
+    background: greenyellow ;
+    border-radius: 0.5rem;
+    box-shadow: inset 0 0 0.5rem 0 rgba(3, 183, 57, 0.2);
+    
+  }
+  
+  
+  .filter:checked{
+    background: black;
+  }
+  
+  .filter:checked ~ .label{
+    text-decoration: underline;
+  }
+  .label:hover{
+    cursor: pointer;
+  }
+  .filter:hover{
+    cursor: pointer;
+  
+  }
+  
