--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,27 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+
     
 }
+
+
+
+.body-detail{
+display: flex;
+justify-content: center;
+align-items:center;
+border: 0.5rem solid grey;
 
 img {
     height: 100%;
     width: 100%;
+    object-fit: cover;
+}
+
+.img2{
+    width: 50%; 
+    height: 100%;
     object-fit: cover;
 }
 
@@ -912,7 +927,6 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
     font-family: -apple-system, Arial, sans-serif;
     font-size: 1rem;
     font-weight: 400;
@@ -925,6 +939,8 @@ p {
     border: 8px solid #ced4da;
     border-radius: 0.5rem;
     max-width: 70%;   
+    margin: 0 auto;
+
 }
 
 .Formulier3{
@@ -1145,4 +1161,122 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
     cursor: pointer;
   
   }
+
+  .button{
+    font-size: 3rem;
+    background-color: greenyellow;
+    border: 0.2rem solid transparent;
+    padding: 0 1rem;
+    text-align: center;
+    border: none;
+    text-decoration: none;
+    color: white;
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+  }
   
+
+  .container2{
+    display: flex;
+    align-items: center;
+    flex-direction: center;
+    min-height: none;
+    padding-top: 2rem;
+    background: grey;
+
+  }
+
+  .detail_body{
+height: 60%;  }
+
+  .home{
+    text-decoration: none;
+  }
+
+
+.place-info {
+    background-color: var(--papaya);
+}
+
+.place-info header {
+    background-color: white;
+    padding: 8rem;
+}
+
+.place-info figure {
+    height: 57rem;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    box-shadow: inset 1px 1px 10px #333333;
+}
+
+.place-info p {
+    margin: 0 2rem 2rem 2rem;
+}
+
+.place-info a {
+    display: inline-block;
+    margin: 0 2rem 2rem 2rem;
+}
+
+.place-info figure em {
+    padding: 1rem;
+    font-size: 3rem;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 5px var(--prussian-blue);
+    background-color: var(--prussian-blue);
+    color: white;
+    font-weight: var(--font-weight-bold);
+    font-style: normal;
+    border: 2px solid white;
+}
+
+.place-info h2 {
+    color: var(--prussian-blue);
+    font-size: 4rem;
+    font-weight: var(--font-weight-bold);
+}
+
+.place-info h3 {
+    color: var(--superiority-blue);
+    font-size: 3rem;
+}
+
+.place-info p {
+    font-size: 1.6rem;
+}
+
+.places-sidebar {
+    background-color: white;
+    padding: 6rem;
+    font-size: 2rem;
+    flex-grow: 1;
+}
+
+.places-sidebar h3 {
+    font-size: 2rem;
+    background-color:var(--superiority-blue);
+    color: white;
+    padding: 1rem;
+    margin-bottom: 1rem;
+} 
+
+.places-sidebar li {
+    font-size: 1.6rem;
+    color:var(--prussian-blue)
+}
+
+.places-sidebar ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
